Fixed billboard image flicker on load

--- a/css/personalizedContent/nivo.less
+++ b/css/personalizedContent/nivo.less
@@ -8,6 +8,7 @@
 		overflow   : hidden;
 		img {
 			position  : absolute;
+			display   : none;
 			top       : 0px;
 			left      : 0px;
 			max-width : none;
